# grace

./: .envrc  .gitignore  .gitmodules  Dockerfile  README.md  flocklab-gpio.h  install_pkgs.sh  packages.scm  wip.org
raspi/gpio-tracer/: CMakeLists.txt  README.md  compile_commands.json  readme.md  rest.el  restart-services.sh  running.org  sync.rules  sync.sh  update-all.sh
raspi/gpio-tracer/deployment/: generate-new.sh  gpiotc  gpiotd  gpiotd-wrapper.sh  install.sh  libsigrok.so.4  sync-server-wrapper.sh  sync.sh
raspi/gpio-tracer/firmware/: Makefile  bulkloop.c
raspi/gpio-tracer/firmware/fx2/: Makefile  dscr.a51  extra_script.py  fx2-tracer.c  platformio.ini
raspi/gpio-tracer/firmware/fx2/boards/: CY7C68013A-56.json
raspi/gpio-tracer/firmware/stm32/: README.md  compile_commands.json  platformio.ini
raspi/gpio-tracer/firmware/stm32/src/: cc1101.c  cc1101.h  exti.c  exti.h  gpio.c  gpio.h  i2c.c  i2c.h  main.c  main.h  spi.c  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  system_stm32f4xx.c  tim.c  tim.h  time.c  time.h  uart.c  uart.h  usb.c  usb.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
raspi/gpio-tracer/hardware/: README.md  cc1101-expansion-board.kicad_pcb  cc1101-expansion-board.sch
raspi/gpio-tracer/include/: cc1101.h  chunked_output.h  configuration.h  fx2.h  la_pigpio.h  la_sigrok.h  output.h  output_module.h  postprocess.h  preprocess.h  radio-master.h  radio-slave.h  radio.h  timestamp.h  tracing.h  transmitter.h  types.h
raspi/gpio-tracer/lib/: #timestamp.c#  CMakeLists.txt  cc1101.c  chunked_output.c  configuration.h  fx2.c  output.c  output.h  postprocess.c  preprocess.c  radio.c  radio_master.c  radio_slave.c  timestamp.c  timestamp.h  tracing.c  transmitter.c  types.h
raspi/gpio-tracer/lib/collection/: #sigrok.c#  la_pigpio.c  la_pigpio.h  la_sigrok.c  la_sigrok.h  preprocess.c
raspi/gpio-tracer/python/: collector-rest-server.py  process-traces.py  psshlib.py  sync-node-rest-server.py  sync-rest-server.py  testbed-interface.py
raspi/gpio-tracer/src/: CMakeLists.txt  dbus-gpiotc.c  dbus-gpiotd.c  example-receiver.c  example-transmitter.c  gpiot.h  gpiotc.c  gpiotd.c  load-firmware.c  test_fx2.c  test_tracing.c  write-eeprom.c
raspi/gpio-tracer/systemd/: collector-rest-server.service  dbus-org.cau.gpiot.service  gpiot.conf  org.cau.gpiot.service  sync-node-rest-server.service
raspi/gpio-tracer/udev/: 60-gpio-tracer.rules
raspi/logic-analyzer/: CMakeLists.txt
raspi/logic-analyzer/lib/: CMakeLists.txt  configuration.h  context.c  context.h  output.c  output.h  timestamp.c  timestamp.h
raspi/logic-analyzer/lib/collection/: la_sigrok.c  la_sigrok.h
raspi/logic-analyzer/src/: CMakeLists.txt  gpiotc.c  gpiotd.c  main.c
raspi/scripts/zoul/: install.sh  serial_forwarder.sh
server/scripts/: all-hosts  testbed.py
server/scripts/sky/: start.py
server/scripts/zoul/: start.py  stop.py
